Blender overwrites .psd files with compressed jpegs without warning #45823

Closed
opened 2015-08-17 15:22:02 +02:00 by Matt Heimlich · 9 comments

System Information
Win7 x64

Blender Version
Broken in Master as of August 15th

Short description of error
Using Alt + S to save in the UV/Image Editor with a .psd image open with overwrite the .psd file with a horribly compressed jpeg file with no way to recover.

Exact steps for others to reproduce the error
Open a .psd in the UV/Image editor. Make an edit. Save.

**System Information** Win7 x64 **Blender Version** Broken in Master as of August 15th **Short description of error** Using Alt + S to save in the UV/Image Editor with a .psd image open with overwrite the .psd file with a horribly compressed jpeg file with no way to recover. **Exact steps for others to reproduce the error** Open a .psd in the UV/Image editor. Make an edit. Save.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Dalai Felinto was assigned by Matt Heimlich 2015-08-17 15:22:02 +02:00
Author

Added subscriber: @MatthewHeimlich

Added subscriber: @MatthewHeimlich

Added subscriber: @mont29

Added subscriber: @mont29

Seems bad indeed, we should probably disable 'save' in such case, and only allow for 'save as' option?

Seems bad indeed, we should probably disable 'save' in such case, and only allow for 'save as' option?

Seems bad indeed, we should probably disable 'save' in such case, and only allow for 'save as' option?

I would say so.

> Seems bad indeed, we should probably disable 'save' in such case, and only allow for 'save as' option? I would say so.
Member

Added subscriber: @MartijnBerger

Added subscriber: @MartijnBerger
Member

Or make saving a buffer coerced to a jpeg actually save it as a .jpg and not use the .psd extension.

Or make saving a buffer coerced to a jpeg actually save it as a .jpg and not use the .psd extension.

This issue was referenced by 70b7dc993e

This issue was referenced by 70b7dc993e6ef92396c7a871a8f5feb2b2373326

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45823
No description provided.