Fix T45823: PSD files save as JPG without warning

Don't allow image save (which overwrites without asking),
unless the input format can be written to.